# zemenbar

./: .gitignore  README.md  package.json  pnpm-lock.yaml
docs/: README-images-guide.md
docs/images/: .gitkeep
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: EthiopianCalendar.svelte
src/routes/: +page.svelte
