[package]
name = "zemenbar"
version = "0.5.1"
description = "Ethiopian Calendar Menu Bar App"
authors = ["you"]
edition = "2021"

[lib]

name = "zemenbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ethiopic-calendar = "0.1.4"
tauri-plugin-autostart = "^2"
tauri-plugin-single-instance = "^2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

